--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity"
+    android:background="?attr/backgroundColor"
     android:padding="10dp"
-    android:background="?attr/backgroundColor">
+    tools:context=".RegisterActivity">
 
     <EditText
         android:id="@+id/txtRegisterName"
@@ -87,7 +87,7 @@
 
     <Button
         android:id="@+id/btnRegisterToLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
@@ -97,7 +97,7 @@
 
     <Button
         android:id="@+id/btnRegisterToMenu"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
