Music list in settings. Playing music while in RandomGameActivity

--- a/app/src/main/res/layout/fragment_settings_tab_sound.xml
+++ b/app/src/main/res/layout/fragment_settings_tab_sound.xml
@@ -55,7 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="insert song name here"
+            android:text="Forest Walk"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtMusic" />
 
@@ -64,9 +64,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="insert song name here"
+            android:text="Piano"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chkBoxSong1" />
+
+        <CheckBox
+            android:id="@+id/chkBoxSong3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="132dp"
+            android:text="Just Relax"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtMusic" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
