Custom image crop to square, string translations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,7 +82,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:text="Game Guide"
+        android:text="@string/guide"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +93,7 @@
         android:layout_width="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:text="Account"
+        android:text="@string/account"
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
