--- a/app/src/main/res/layout/activity_settings_chose_library_picture.xml
+++ b/app/src/main/res/layout/activity_settings_chose_library_picture.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/image_view"
         android:layout_marginTop="16dp"
-        android:text="Chose Image"
+        android:text="@string/choose_image"
         app:layout_constraintTop_toBottomOf="@+id/image_view"
         tools:layout_editor_absoluteX="-13dp" />
 
@@ -43,7 +43,7 @@
         android:layout_below="@id/chose_image_btn"
         android:layout_marginTop="24dp"
         android:enabled="false"
-        android:text="Confirm"
+        android:text="@string/confirm"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chose_image_btn" />
 
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Confirm if picture is correct one"
+        android:text="@string/confirm_correct"
         app:layout_constraintBottom_toBottomOf="@+id/chose_image_btn2"
         app:layout_constraintStart_toEndOf="@+id/chose_image_btn2"
         app:layout_constraintTop_toTopOf="@+id/chose_image_btn2" />
