--- a/app/src/main/res/layout/activity_random_game.xml
+++ b/app/src/main/res/layout/activity_random_game.xml
@@ -242,7 +242,8 @@
         android:layout_marginTop="68dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gameTilesHolder"
-        app:srcCompat="@drawable/card_background_blue" />
+        app:srcCompat="@drawable/card_background_blue"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
