--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -104,4 +104,25 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/txtLoginName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="16dp"
+        android:text="@string/logged_out"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+    <Button
+        android:id="@+id/btnToTest2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Test2"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/btnToTest1"
+        app:layout_constraintEnd_toStartOf="@+id/btnToTest1"
+        app:layout_constraintTop_toTopOf="@+id/btnToTest1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
