--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/btnToTest2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:text="Test2"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/btnToTest1"
+        app:layout_constraintEnd_toStartOf="@+id/btnToTest1"
+        app:layout_constraintTop_toTopOf="@+id/btnToTest1" />
+
     <TextView
         android:id="@+id/txtLoginName"
         android:layout_width="wrap_content"
