--- a/app/src/main/res/layout/activity_game_guide.xml
+++ b/app/src/main/res/layout/activity_game_guide.xml
@@ -11,19 +11,6 @@
 
 
     <!-- Pakeist height'a, kai bus content'as -->
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="600dp"
-        android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnGameGuideToMenu"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <!-- Place game guide content here -->
-
-
-    </ScrollView>
 
     <Button
         android:id="@+id/btnGameGuideToMenu"
@@ -34,6 +21,44 @@
         android:text="@string/MainMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnGameGuideToAboutPuzzle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="612dp"
+        android:text="About Puzzle15"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnGameGuideToRandomGame"
+        android:layout_width="177dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginBottom="500dp"
+        android:text="RandomGame"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnGameGuideToCustomGame"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="396dp"
+        android:text="Custom Game"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/btnGameGuideToAccount"
+        android:layout_width="202dp"
+        android:layout_height="49dp"
+        android:text="Account"
+        tools:layout_editor_absoluteX="104dp"
+        tools:layout_editor_absoluteY="353dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
