--- a/app/src/main/res/layout/activity_game_guide.xml
+++ b/app/src/main/res/layout/activity_game_guide.xml
@@ -14,21 +14,23 @@
 
     <Button
         android:id="@+id/btnGameGuideToMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/MainMenu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnGameGuideToAboutPuzzle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="612dp"
-        android:text="About Puzzle15"
+        android:layout_width="177dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginBottom="604dp"
+        android:text="@string/AboutPuzzle15"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -37,28 +39,30 @@
         android:layout_width="177dp"
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
-        android:layout_marginBottom="500dp"
-        android:text="RandomGame"
+        android:layout_marginBottom="512dp"
+        android:text="@string/random_game"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnGameGuideToCustomGame"
-        android:layout_width="170dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="396dp"
-        android:text="Custom Game"
+        android:layout_width="177dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginBottom="416dp"
+        android:text="CustomGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/btnGameGuideToAccount"
-        android:layout_width="202dp"
-        android:layout_height="49dp"
+        android:layout_width="177dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="116dp"
+        android:layout_marginBottom="316dp"
         android:text="Account"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="353dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
