--- a/app/src/main/res/layout/activity_game_guide_about_puzzle.xml
+++ b/app/src/main/res/layout/activity_game_guide_about_puzzle.xml
@@ -31,7 +31,7 @@
         app:layout_constraintVertical_bias="0.023" />
 
     <Button
-        android:id="@+id/btnToGameGuide"
+        android:id="@+id/btnToGameGuide1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
