--- a/app/src/main/res/layout/activity_game_guide_account.xml
+++ b/app/src/main/res/layout/activity_game_guide_account.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,16 +26,41 @@
                 android:id="@+id/textView14"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Account option gives you login or register to your account.User which  is log in can see his own highscores"
+                android:text="Account option gives you login or register to your account.User which  is log in can see his own highscores
+Login Screen:"
                 android:textColor="@color/black"
                 android:textSize="50px"/>
 
             <ImageView
                 android:id="@+id/imageView4"
+                android:layout_width="400dp"
+                android:layout_height="169dp"
+                app:srcCompat="@mipmap/login" />
+
+            <TextView
+                android:id="@+id/textView15"
                 android:layout_width="match_parent"
-                android:layout_height="272dp"
-                app:srcCompat="@mipmap/account" />
+                android:layout_height="44dp"
+                android:text="Registration screen:"
+                android:textColor="@color/black"
+                android:textSize="50px" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="match_parent"
+                android:layout_height="340dp"
+                app:srcCompat="@mipmap/register" />
 
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/btnToGameGuide4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:text="GameGuide"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"  />
 </androidx.constraintlayout.widget.ConstraintLayout>
