--- a/app/src/main/res/layout/activity_game_guide.xml
+++ b/app/src/main/res/layout/activity_game_guide.xml
@@ -40,7 +40,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
         android:layout_marginBottom="512dp"
-        android:text="@string/random_game"
+        android:text="@string/RandomGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -50,7 +50,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
         android:layout_marginBottom="416dp"
-        android:text="CustomGame"
+        android:text="@string/CustomGame"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -60,7 +60,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="116dp"
         android:layout_marginBottom="316dp"
-        android:text="Account"
+        android:text="@string/Account"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
