--- a/app/src/main/res/layout/activity_game_guide_about_puzzle.xml
+++ b/app/src/main/res/layout/activity_game_guide_about_puzzle.xml
@@ -20,7 +20,7 @@
         android:layout_width="353dp"
         android:layout_height="311dp"
         android:layout_marginTop="40dp"
-        android:text="The 15 puzzle (also called Gem Puzzle, Boss Puzzle, Game of Fifteen, Mystic Square and many others) is a sliding puzzle having 15 square tiles numbered 1–15 in a frame that is 4 tiles high and 4 tiles wide, leaving one unoccupied tile position. Tiles in the same row or column of the open position can be moved by sliding them horizontally or vertically, respectively. The goal of the puzzle is to place the tiles in numerical order"
+        android:text="@string/Puzzle15Text"
         android:textColor="@color/black"
         android:textSize="50px"
         app:layout_constraintBottom_toBottomOf="parent"
