--- a/app/src/main/res/layout/activity_game_guide_custom_game.xml
+++ b/app/src/main/res/layout/activity_game_guide_custom_game.xml
@@ -27,7 +27,7 @@
                 android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Custom Game"
+                android:text="@string/CustomGame"
                 android:textColor="@color/black"
                 android:textSize="70px" />
 
@@ -35,7 +35,7 @@
                 android:id="@+id/textView11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Custom game option allows you to customize your game: How much steps to finish has to be and card style."
+                android:text="@string/CustomGameText1"
                 android:textColor="@color/black"
                 android:textSize="50px" />
 
@@ -49,7 +49,7 @@
                 android:id="@+id/textView12"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Card style has 3 options: Numbers - usual puzzle 15 game , Letters - numbers changed to letter and Picture - to put together picture "
+                android:text="@string/CustomGameText2"
                 android:textColor="@color/black"
                 android:textSize="50px" />
 
