--- a/app/src/main/res/layout/activity_game_guide_random_game.xml
+++ b/app/src/main/res/layout/activity_game_guide_random_game.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/txtGGRG"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Random Game"
+                android:text="@string/RandomGame"
                 android:textColor="@color/black"
                 android:textSize="70px" />
 
@@ -38,7 +38,7 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Random Game option gives you randomly generated Puzzle 15 game"
+                android:text="@string/RandomGameText"
                 android:textColor="@color/black"
                 android:textSize="50px" />
 
@@ -52,9 +52,15 @@
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="After wining game Wining Screen pops up with infomation such as : How much time taken , moves taken and Score"
+                android:text="@string/RandomGameText1"
                 android:textColor="@color/black"
                 android:textSize="50px" />
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="match_parent"
+                android:layout_height="182dp"
+                app:srcCompat="@mipmap/wining" />
 
         </LinearLayout>
     </ScrollView>
