--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginTop="16dp"
+        android:textColor="@color/black"
+        android:textSize="70px"
         android:text="Projektas: Puzzle15\nAutoriai:\nBaranauskis Dominykas IFC-8\nMileška Rolandas IFF-9/9\nPadegimas Laurynas IFAi-8\nSapitavičius Andrius IFC-8\nVaidelauskas Matas IFZm-8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:textColor="@color/black"
+        android:textSize="100px"
         android:text="@string/about"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
