--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -36,13 +36,24 @@
 
     <Button
         android:id="@+id/btnAccountLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtAccountPassword" />
+
+    <Button
+        android:id="@+id/btnAccountLogout"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="Logout"
+        app:layout_constraintEnd_toEndOf="@+id/btnAccountLogin"
+        app:layout_constraintStart_toStartOf="@+id/btnAccountLogin"
+        app:layout_constraintTop_toBottomOf="@+id/btnAccountLogin"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/btnAccountToMenu"
