--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:padding="10dp"
     tools:context=".MainActivity">
 
+
+
     <ImageView
         android:id="@+id/imgLogo"
         android:layout_width="300dp"
@@ -104,9 +106,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Test1"
-        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/btnLogout" />
+        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/btnToTest2"
